force-app/main/default/objects/Session_Asset__c/Session_Asset__c.object-meta.xml
<CustomObject>
    <label>Activo de sesión</label>
    <nameField>
        <displayFormat>BSA-{000000}</displayFormat>
        <label>Session Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activos de sesiones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>