force-app/main/default/objects/Session_Asset__c/fields/Benefit_Session__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Session__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Relation with Benefit Session</description>
    <label>Benefit Session</label>
    <referenceTo>BenefitSession</referenceTo>
    <relationshipLabel>Session Assets</relationshipLabel>
    <relationshipName>Session_Assets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>