force-app/main/default/objects/Session_Asset__c/fields/Capacidad_Actual__c.field-meta.xml
<CustomField>
    <fullName>Capacidad_Actual__c</fullName>
    <label>Ocupación Actual</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>