force-app/main/default/objects/Session_Asset__c/fields/Capacidad_Maxima__c.field-meta.xml
<CustomField>
    <fullName>Capacidad_Maxima__c</fullName>
    <formula>Asset__r.Tripulantes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capacidad Maxima</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>