force-app/main/default/objects/Session_Asset__c/fields/Fecha_de_la_Cesion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_la_Cesion__c</fullName>
    <formula>datevalue(Benefit_Session__r.StartDateTime)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de la Cesion</label>
    <type>Date</type>
</CustomField>