force-app/main/default/objects/Session_Asset__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reservado</fullName>
                <default>true</default>
                <label>Reservado</label>
            </value>
            <value>
                <fullName>Completo</fullName>
            </value>
            <value>
                <fullName>Por Completar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>