force-app/main/default/objects/Session_Asset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Benefit_Session__c</columns>
    <columns>Capacidad_Actual__c</columns>
    <columns>Capacidad_Maxima__c</columns>
    <columns>Status__c</columns>
    <columns>Asset__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>